--- a/BUY.css
+++ b/BUY.css
@@ -35,3 +35,55 @@ body{
     background-color: green;
     color: white;
 }
+
+#root{
+    width: 100px;
+    height: 30px;
+    border: 2px solid black;
+    margin-left: 20px;
+  
+}
+#root #a{
+    font-size: 24px;
+    width: 70px;
+    height: 30px;
+    text-decoration: none;
+}
+   /* sign page design  */
+.sign_main {
+    position: absolute;
+    text-align: center;
+    margin-left: 20vw;
+    margin-top: 20vh;
+    justify-content: center;
+}
+
+.sign{
+    width: 60vw;
+    height: 400px;
+    background-color: darkgrey;
+    border: 2px solid gray;
+    box-shadow: 10px 10px 10px lightblue ;
+    border-radius: 70px;
+    text-align: center;
+}
+.name{
+    margin-top: 18%;
+}
+input{
+    border: 2px solid ;
+    width: 300px;
+    height: 30px;
+}
+.signName{
+    font-size: 30px;
+}
+
+.btn1{
+    width: 111px;
+    height: 40px;
+    background: #8160ec7d;
+    font-size: 20px;
+    box-shadow: 5px 5px;
+    cursor: pointer;
+}
